tests/ui/impl-trait/auto-trait-leak.stderr
error: cannot check whether the hidden type of opaque type satisfies auto traits
  --> $DIR/auto-trait-leak.rs:18:10
   |
LL |     send(cycle1().clone());
   |     ---- ^^^^^^^^^^^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
   = note: fetching the hidden types of an opaque inside of the defining scope is not supported. You can try moving the opaque type and the item that actually registers a hidden type into a new submodule
note: opaque type is declared here
  --> $DIR/auto-trait-leak.rs:11:16
   |
LL | fn cycle1() -> impl Clone {
   |                ^^^^^^^^^^
note: required by a bound in `send`
  --> $DIR/auto-trait-leak.rs:4:12
   |
LL | fn send<T: Send>(_: T) {}
   |            ^^^^ required by this bound in `send`

error: aborting due to 1 previous error

